--- a/config/environments/test.rb.sample
+++ b/config/environments/test.rb.sample
@@ -37,4 +37,6 @@ Knoda::Application.configure do
 
   # Print deprecation notices to the stderr.
   config.active_support.deprecation = :stderr
+
+	config.action_mailer.default_url_options = { :host => 'localhost' }
 end
