--- a/config/environments/development.rb.sample
+++ b/config/environments/development.rb.sample
@@ -26,4 +26,10 @@ Knoda::Application.configure do
   # This option may cause significant delays in view rendering with a large
   # number of complex assets.
   config.assets.debug = true
+
+  config.action_mailer.default_url_options = { :host => "localhost" }
+
+  config.reports_mailer_from = "example@example.com"
+  config.reports_mailer_to = "example@example.com"
+  config.user_mailer_from = "example@example.com"
 end
