--- a/config/environments/test.rb.sample
+++ b/config/environments/test.rb.sample
@@ -38,5 +38,9 @@ Knoda::Application.configure do
   # Print deprecation notices to the stderr.
   config.active_support.deprecation = :stderr
 
-	config.action_mailer.default_url_options = { :host => 'localhost' }
+  config.action_mailer.default_url_options = { :host => "localhost" }
+
+  config.reports_mailer_from = "example@example.com"
+  config.reports_mailer_to = "example@example.com"
+  config.user_mailer_from = "example@example.com"
 end
