--- a/config/environments/production.rb.sample
+++ b/config/environments/production.rb.sample
@@ -43,7 +43,7 @@ Knoda::Application.configure do
   # config.force_ssl = true
 
   # Set to :debug to see everything in the log.
-  config.log_level = :trace
+  config.log_level = :debug
 
   # Prepend all log lines with the following tags.
   # config.log_tags = [ :subdomain, :uuid ]
